# cp

./: .gitignore  CMakeLists.txt  README.md  任务要求.md  需求分析与任务分配.md
docs/: 实践报告.md  角色A任务计划.md  角色A协作说明.md  角色A设计文档.md
src/: ast.h  codegen.cpp  codegen.h  ir.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  symbol_table.cpp  symbol_table.h  utils.cpp  utils.h
tests/: run_tests.py  test_codegen.cpp  test_integration.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_semantic.cpp
tests/功能测试用例/: 02_arithmetic.tc  03_control_flow.tc  04_functions_globals.tc  05_logic.tc  06_nested_if_else.tc  07_scope_shadowing.tc  08_boolean_compare.tc  09_continue_and_nested_loops.tc  11_global_var.tc  12_unary_ops.tc  13_void_function.tc  14_complex_expr.tc
